--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-    - pytest tests.py
+    - pytest --cov=simple_specification --cov-branch tests.py
+after_success:
+    - coveralls
